--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,5 @@ cmake_minimum_required(VERSION 3.20)
 project(controllers)
 
 add_subdirectory(./controllers)
+add_subdirectory(./examples/simulator)
 add_subdirectory(./examples/cassie)
