--- a/examples/cassie/CMakeLists.txt
+++ b/examples/cassie/CMakeLists.txt
@@ -4,7 +4,6 @@ project(cassie_simulator)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-find_package(mujoco REQUIRED)
 find_package(Eigen3 3.3 REQUIRED)
 find_package(pinocchio)
 find_package(casadi)
@@ -42,8 +41,14 @@ Eigen3::Eigen
 )
 target_include_directories(cassie_codegen_leg PUBLIC ${pinocchio_INCLUDE_DIRS})
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/model/urdf/cassie_leg.urdf 
+${CMAKE_CURRENT_BINARY_DIR}/cassie_leg.urdf
+COPYONLY)
+
 add_executable(cassie_heel_spring_test test/heel_spring_test.cc)
 target_link_libraries(cassie_heel_spring_test PUBLIC Eigen3::Eigen cassie_control)
 
 add_executable(cassie_simulator sim/simulate.cc)
-target_link_libraries(cassie_simulator PUBLIC mujoco::mujoco glfw Eigen3::Eigen cassie_control)
+target_link_libraries(cassie_simulator PUBLIC mujoco_simulator Eigen3::Eigen cassie_control)
+
+file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/sim/agility_cassie" "${CMAKE_CURRENT_BINARY_DIR}/agility_cassie" SYMBOLIC)
