Hacky fix for mac

--- a/controllers/CMakeLists.txt
+++ b/controllers/CMakeLists.txt
@@ -18,7 +18,8 @@ file(GLOB_RECURSE SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc
 )
 
+# TODO: Figure out why we need path to qpOASES
 add_library(controllers SHARED ${INCLUDE} ${SRC})
-target_link_libraries(controllers PUBLIC Eigen3::Eigen glog::glog qpOASES)
+target_link_libraries(controllers PUBLIC Eigen3::Eigen glog::glog /usr/local/lib/libqpOASES.dylib)
 target_include_directories(controllers PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include/")
 set_target_properties(controllers PROPERTIES LINKER_LANGUAGE CXX)
