--- a/examples/simulator/CMakeLists.txt
+++ b/examples/simulator/CMakeLists.txt
@@ -5,14 +5,15 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 find_package(mujoco REQUIRED)
-find_package(glfw3 REQUIRED) #TODO: Only do this for mac?
+find_package(glfw3 REQUIRED)
 
-file(GLOB_RECURSE SRC #TODO: Don't use GLOB, write out file path
+#TODO: Jesse suggested not usin GLOB, write out file path instead?
+file(GLOB_RECURSE SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/*.cc
 )
 
 add_library(mujoco_simulator SHARED ${SRC})
 target_include_directories(mujoco_simulator PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/")
-target_link_libraries(mujoco_simulator PUBLIC mujoco::mujoco glfw) ## Not working on mac. Try comparing output after cmake .. -DCMAKE_VERBOSE_MAKEFILE=ON between ubuntu and mac
+target_link_libraries(mujoco_simulator PUBLIC mujoco::mujoco glfw)
 set_target_properties(mujoco_simulator PROPERTIES LINKER_LANGUAGE CXX)
