--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(./examples/codegen)
 add_subdirectory(./examples/simulator)
 add_subdirectory(./examples/arm)
 add_subdirectory(./examples/cassie)
+add_subdirectory(./examples/cassie-v2)
