--- a/examples/cassie-v2/CMakeLists.txt
+++ b/examples/cassie-v2/CMakeLists.txt
@@ -5,9 +5,9 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 find_package(glog REQUIRED)
-# find_package(Eigen3 3.3 REQUIRED)
-# find_package(pinocchio)
-# find_package(casadi)
+find_package(Eigen3 3.3 REQUIRED)
+find_package(pinocchio)
+find_package(casadi)
 
 # include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
@@ -16,10 +16,10 @@ find_package(glog REQUIRED)
 #     ${CMAKE_CURRENT_SOURCE_DIR}/controller/*.cc
 # )
 
-# file(GLOB_RECURSE CASSIE_CODEGEN_SRC
-#     ${CMAKE_CURRENT_SOURCE_DIR}/model/cg/*.h
-#     ${CMAKE_CURRENT_SOURCE_DIR}/model/cg/*.c
-# )
+file(GLOB_RECURSE CASSIE_CODEGEN_SRC
+    # ${CMAKE_CURRENT_SOURCE_DIR}/model/cg/*.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/model/cg/*.c
+)
 
 # add_library(cassie_control SHARED ${CTRL_SRC} ${CASSIE_CODEGEN_SRC})
 # target_link_libraries(cassie_control controllers)
@@ -36,20 +36,21 @@ find_package(glog REQUIRED)
 # target_include_directories(cassie_codegen PUBLIC ${pinocchio_INCLUDE_DIRS})
 
 # Single-leg Cassie dynamics
-# add_executable(cassie_codegen_leg ${CMAKE_CURRENT_SOURCE_DIR}/model/codegen_leg.cc)
-# target_link_libraries(cassie_codegen_leg PUBLIC 
-# ${pinocchio_LIBRARIES}
-# casadi
-# Eigen3::Eigen
-# )
-# target_include_directories(cassie_codegen_leg PUBLIC ${pinocchio_INCLUDE_DIRS})
+add_executable(cassie_codegen_leg_v2 ${CMAKE_CURRENT_SOURCE_DIR}/model/codegen_leg.cc)
+target_link_libraries(cassie_codegen_leg_v2 PUBLIC 
+${pinocchio_LIBRARIES}
+casadi
+Eigen3::Eigen
+)
+target_include_directories(cassie_codegen_leg_v2 PUBLIC ${pinocchio_INCLUDE_DIRS})
 
-# configure_file(${CMAKE_CURRENT_SOURCE_DIR}/model/urdf/cassie_leg.urdf 
-# ${CMAKE_CURRENT_BINARY_DIR}/cassie_leg.urdf
-# COPYONLY)
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/model/urdf/cassie_leg.urdf 
+${CMAKE_CURRENT_BINARY_DIR}/cassie_leg.urdf
+COPYONLY)
 
 add_executable(cassie_stand_sim sim/simulate.cc)
 target_link_libraries(cassie_stand_sim PUBLIC mujoco_simulator)
+target_link_libraries(cassie_stand_sim PUBLIC mujoco_simulator Eigen3::Eigen)
 # target_link_libraries(cassie_stand_sim PUBLIC mujoco_simulator Eigen3::Eigen cassie_control glog::glog)
 
 file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/sim/agility_cassie" "${CMAKE_CURRENT_BINARY_DIR}/agility_cassie" SYMBOLIC)
