--- a/examples/cassie-v2/CMakeLists.txt
+++ b/examples/cassie-v2/CMakeLists.txt
@@ -12,20 +12,20 @@ find_package(casadi)
 
 # include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-# file(GLOB_RECURSE CTRL_SRC
-#     ${CMAKE_CURRENT_SOURCE_DIR}/controller/*.h
-#     ${CMAKE_CURRENT_SOURCE_DIR}/controller/*.cc
-# )
+file(GLOB_RECURSE CTRL_SRC
+    ${CMAKE_CURRENT_SOURCE_DIR}/controller/*.h
+    ${CMAKE_CURRENT_SOURCE_DIR}/controller/*.cc
+)
 
 file(GLOB_RECURSE CASSIE_CODEGEN_SRC
     ${CMAKE_CURRENT_SOURCE_DIR}/model/cg/*.h
     ${CMAKE_CURRENT_SOURCE_DIR}/model/cg/*.c
 )
 
-# add_library(cassie_control SHARED ${CTRL_SRC} ${CASSIE_CODEGEN_SRC})
-# target_link_libraries(cassie_control controllers)
-# target_include_directories(cassie_control PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/")
-# set_target_properties(cassie_control PROPERTIES LINKER_LANGUAGE CXX)
+add_library(cassie_control_v2 SHARED ${CTRL_SRC} ${CASSIE_CODEGEN_SRC})
+target_link_libraries(cassie_control_v2 controllers)
+target_include_directories(cassie_control_v2 PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/")
+set_target_properties(cassie_control_v2 PROPERTIES LINKER_LANGUAGE CXX)
 
 # Full-body Cassie dynamics
 # add_executable(cassie_codegen ${CMAKE_CURRENT_SOURCE_DIR}/model/codegen.cc)
@@ -48,8 +48,8 @@ ${CMAKE_CURRENT_BINARY_DIR}/cassie_leg.urdf
 COPYONLY)
 
 add_executable(cassie_stand_sim sim/simulate.cc)
-target_link_libraries(cassie_stand_sim PUBLIC mujoco_simulator)
-target_link_libraries(cassie_stand_sim PUBLIC mujoco_simulator Eigen3::Eigen)
-# target_link_libraries(cassie_stand_sim PUBLIC mujoco_simulator Eigen3::Eigen cassie_control glog::glog)
+# target_link_libraries(cassie_stand_sim PUBLIC mujoco_simulator)
+# target_link_libraries(cassie_stand_sim PUBLIC mujoco_simulator Eigen3::Eigen)
+target_link_libraries(cassie_stand_sim PUBLIC mujoco_simulator Eigen3::Eigen cassie_control_v2 glog::glog)
 
 file(CREATE_LINK "${CMAKE_CURRENT_SOURCE_DIR}/sim/agility_cassie" "${CMAKE_CURRENT_BINARY_DIR}/agility_cassie" SYMBOLIC)
