Working on Arm example to see why the tracking task isn't working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,7 @@ cmake_minimum_required(VERSION 3.20)
 project(controllers)
 
 add_subdirectory(./examples/simulator)
-# add_subdirectory(./examples/arm)
+
+# Examples
+add_subdirectory(./examples/arm)
 add_subdirectory(./examples/cassie)
